@@ -4107,22 +4107,21 @@ See also: enter, @leave, @lfail, @lock, INTERIORS
 & look
 & read
   look [<object>]
-  look <person>'s <object>
-  look/outside
+  look <container>'s <object>
+  look <exit>'s <object>
+  look/outside [<object>]
 
-  Displays the description of <object>, or the room you're in if you
-  don't name a specific object.  You can specify object as <name> or
-  #<dbref> or 'me' or 'here'. On some MUSHes, 'read' may work the same
-  as 'look'. The second form of this command allows you to look at
-  objects held by other people, if the person is not OPAQUE.
-    
-  Look can take one switch, "outside". look/outside allows you to look
-  at objects outside your current location, as long as your immediate
-  location is not a room, and is not OPAQUE.
+  Displays the description of <object>, or the room you're in if you don't
+  name a specific object. You can also look at objects inside others, as
+  long as the <container> is not set OPAQUE, or at objects on the other side
+  of an exit, if the exit is set TRANSPARENT or CLOUDY.
+  
+  If you're inside a container, look/outside allows you to look at the room
+  the container is in, or at other objects in your container's location, as
+  long as your container is not set OPAQUE.
 
-(continued in help look2)
+  Continued in 'help look2'.
 & look2
-
   If you look at an object that is not set OPAQUE, you will see any
   non-DARK items in its inventory. You can look at DARK items in your
   location if you know what their name is by typing 'look <object>',
@@ -4131,14 +4130,15 @@ See also: enter, @leave, @lfail, @lock, INTERIORS
   When you type 'look' alone, you look at your current location. For a
   room, this normally shows you the room's description, the list of
   contents, and any obvious exits from the room. For an object, it
-  only shows you the interior description (@idescribe).
+  shows you the interior description (@idescribe) instead, if one is set.
   
   If a room is set DARK, when you look you will not see any of the
   exits or contents of the room, unless they are set LIGHT.
 
-  'look' may be abbreviated 'l'.
+  'look' may be abbreviated 'l', and is sometimes aliased as 'read'.
   
-See also: OPAQUE, FLAGS, @describe, @adescribe, @odescribe, DARK, LIGHT
+See also: OPAQUE, FLAGS, @describe, @adescribe, @odescribe, DARK, LIGHT,
+  TRANSPARENT, CLOUDY
 & news
   news [<topic>]
 
